2002-09-06  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/field.cpp: Fixed size increment in
          array_vector<>::insert.

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/node.cpp: Made Node::initialize
          recursive, so it no longer needs to be used with a
          NodeVisitor.

2002-08-31  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/nodeptr.cpp: Fixed bug in NodePtr::reset
          when 0 is passed as the argument.

2002-08-29  Thomas Flynn  <tflynn@users.sourceforge.net>

        * java/vrml/BaseNode.java,
          java/vrml/MField.java,
          java/vrml/field/ConstMFColor.java,
          java/vrml/field/ConstMFFloat.java,
          java/vrml/field/ConstSFImage.java,
          java/vrml/field/ConstSFVec2f.java,
          java/vrml/field/ConstSFVec3f.java,
          java/vrml/field/SFImage.java,
          java/vrml/field/SFString.java,
          java/vrml/field/SFVec2f.java,
          java/vrml/field/SFVec3f.java: Update javadoc comments.

2002-08-28  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h,
          src/openvrml/OpenVRML/field.cpp,
          src/openvrml/OpenVRML/field.h,
          src/openvrml/OpenVRML/node.cpp,
          src/openvrml/OpenVRML/vrml97node.cpp: Doc-comment fixes and
          code beautification.

        * src/openvrml/OpenVRML/browser.cpp: More doc-comment additions.

        * src/openvrml/OpenVRML/browser.cpp: Fixed
          ProtoNode::getFieldImpl to return the default value for the
          field if it hasn't been IS'd to anything.

2002-08-27  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h: Fixed Scene::loadURI to work
          for "#ViewpointName" syntax.

2002-08-26  Braden McDaniel  <braden@endoframe.com>
